artf848223 : Walkthrough 3.2 - Alignment issue in import popup(checkboxes) artf848242 : Walkthrough 3.2 - Alignment issue in customer dropdown(Note:click download tab and then click customer dropdown) artf848232 : Walkthrough 3.2 - About phresco popup should close while clicking on any other action artf848189 : Walkthrough 3.2 - Add to repo popup and project info UI should be in the same div

--- a/phresco-framework-web/src/main/webapp/themes/default/css/Phresco/style.css
+++ b/phresco-framework-web/src/main/webapp/themes/default/css/Phresco/style.css
@@ -579,6 +579,7 @@ a.dropdown-toggle b.caret  {
 
 .cus_themes {
 	width:175px !important;
+	height:200px !important;
 }
 .customer_names {
 	max-height:200px;
@@ -1121,7 +1122,7 @@ ul.nav li.dropdown:hover > .test_options{
 }
 
 #project_list_import input[type="checkbox"] {
-	margin: 4px 0 5px 10px;
+	margin: -1px 0 5px 10px;
 }
 
 #project_list_import input[type="radio"] {
@@ -1194,7 +1195,7 @@ ul.nav li.dropdown:hover > .test_options{
 	color:#000;
     padding: 5px;
     text-align: center;
-    width: 75px;
+   /*  width: 75px; */
 	border-radius: 8px 8px 0 0;
 	border:1px solid #DDDDDD;
 }
@@ -1214,7 +1215,7 @@ ul.nav li.dropdown:hover > .test_options{
 }
 
 .repository_tabdiv ul li input[type="checkbox"] {
-	margin: 9px 0px 0px 3px !important;
+	margin: 9px 0px 0px 5px !important;
 }
 
 .btn.disabled, .btn[disabled] {
@@ -2096,7 +2097,7 @@ img[name="close"] {
 } 
 
 	#project_list_import input[type="checkbox"]{
-		margin:0px 0 5px 10px !important;
+		/* margin:0px 0 5px 10px !important; */
 }
 
 	.svndata table tr td span:nth-child(2), .testCheckoutData table tr td span:nth-child(2) {
@@ -4867,8 +4868,8 @@ a.selected { background:#dcdcdc; }
 
 .about_cont tr td img { 
 	margin-right:15px; 
-	/*height:19px;*/
-	width:315px;
+	/*height:19px;
+	width:315px;*/
 }
 
 .update_success {
@@ -5486,9 +5487,9 @@ textarea[name="regex"] {
 	background: linear-gradient(to bottom,  #f4f4f4 0%,#e3e3e3 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4f4f4', endColorstr='#e3e3e3',GradientType=0 ); /* IE6-9 */
 	color:#000;
-    padding: 5px;
+    padding: 5px 23px;
     text-align: center;
-    width: 75px;
+   /*  width: 75px; */
 	border-radius: 8px 8px 0 0;
 	border:1px solid #DDDDDD;
 }
